Scroll up on mobile device fix

--- a/app/globals.css
+++ b/app/globals.css
@@ -5,6 +5,7 @@ html, body {
   max-width: 100vw;
   overflow-x: hidden;
   position: relative;
+  background-color: #0C0C0C;
 }
 
 @theme inline {
